// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Title /> > should render 1`] = `
<div
  class="title-container"
  data-astro-cid-qsgiqu7o=""
  style="--colorsWhite: rgb(255, 255, 255);--contentPadding: 0.5rem;--sizes05: 0.5rem;--sizes1: 1rem;--sizes5: 5rem;--sizes375: 37.5rem;"
>
   
  <h1
    data-astro-cid-dqoe6t4j=""
    style="--h1FontFamily: "Big Shoulders Display", Trebuchet MS;--h1FontSize: 3rem;--h1FontWeight: 900;--h1LineHeight: 1.2;"
  >
    Test Title
  </h1>
   
  <aside
    aria-label="Kirjoituksen Test Title meta-tiedot"
    data-astro-cid-k4jemuzu=""
    style="--sizes05: 0.5rem;"
  >
     
    <time
      data-astro-cid-k4jemuzu=""
      datetime="2026-01-01"
      style="font-size:1.875rem;line-height:1.5;font-family:"IBM Plex Sans", Trebuchet MS;font-weight:300;--sizes05: 0.5rem;"
    >
      01.01.2026
    </time>
       
    <ul
      data-astro-cid-k4jemuzu=""
      style="--sizes05: 0.5rem;"
    >
       
      <li
        data-astro-cid-k4jemuzu=""
        style="--sizes05: 0.5rem;"
      >
         
        <a
          data-astro-cid-marlabwr=""
          href="/fi/category/artificial-intelligence/"
          style="--colorsBlack: rgb(0, 0, 0);--colorsForestGreen: rgb(22, 62, 53);--colorsSky: #bbdde6;--colorsWhite: rgb(255, 255, 255);--fontFamilyMono: "IBM Plex Mono", Lucida Sans Typewriter;--fontWeightMedium: 500;"
        >
          <span
            data-astro-cid-marlabwr=""
            style="--colorsBlack: rgb(0, 0, 0);--colorsForestGreen: rgb(22, 62, 53);--colorsSky: #bbdde6;--colorsWhite: rgb(255, 255, 255);--fontFamilyMono: "IBM Plex Mono", Lucida Sans Typewriter;--fontWeightMedium: 500;"
          >
            Tekoäly
          </span>
        </a>
         
      </li>
       
    </ul>
     
  </aside>
   
</div>
`;

exports[`<Title /> > should render minimal 1`] = `
<div
  class="title-container"
  data-astro-cid-qsgiqu7o=""
  style="--colorsWhite: rgb(255, 255, 255);--contentPadding: 0.5rem;--sizes05: 0.5rem;--sizes1: 1rem;--sizes5: 5rem;--sizes375: 37.5rem;"
>
   
  <h1
    data-astro-cid-dqoe6t4j=""
    style="--h1FontFamily: "Big Shoulders Display", Trebuchet MS;--h1FontSize: 3rem;--h1FontWeight: 900;--h1LineHeight: 1.2;"
  >
    Test Title
  </h1>
    
</div>
`;
